# tauri-plugin-mongoose

./: .gitignore  README.md  package-lock.json
guest-js/: index.ts  package-lock.json  package.json  tsconfig.json
guest-js/model/: index.ts
guest-js/schema/: index.ts
guest-js/types/: index.ts  time.type.ts
src/: Cargo.toml  build.rs  commands.rs  lib.rs
src/db/: connection.rs  documents.rs  mod.rs  state.rs  users.rs
src/permissions/: default.toml
src/permissions/autogenerated/: reference.md
src/permissions/autogenerated/commands/: create_db_user.toml  get_by_id.toml  get_users.toml
src/permissions/permissions/: default.toml
src/permissions/permissions/schemas/: schema.json
src/permissions/schemas/: schema.json
